objects/PMC_CPQ_MarketPublicationPrice__c.object
<CustomObject>
    <description>This object is to store the market publication prices.</description>
    <fields>
        <fullName>PMC_CPQ_BaseLocation__c</fullName>
        <description>This is a test field.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Base Location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CommodityCode__c</fullName>
        <description>This is a test field.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Commodity Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryTerms__c</fullName>
        <description>This is a test field.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Terms</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_External_Reference__c</fullName>
        <description>Created as part of GDASF-9446.CPI will use this field to identify records uniquely for UPSERT.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Reference</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ForecastPrice__c</fullName>
        <description>Created as part of GDASF-9446.</description>
        <label>Forecast Price</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PublicationCode__c</fullName>
        <description>This is a test field.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Publication Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Option API Name</fullName>
                    <label>Option Label</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Market Publication Price</label>
    <nameField>
        <displayFormat>MPP-{0000000000}</displayFormat>
        <label>Market Publication Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Publication Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>